gcc/testsuite/rust/rustc/ui/parser/removed-syntax-mode.rs
fn f(+x: isize) {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

